<resources>
    <string name="app_name">AgroTwin</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_text" />

    <string name="queEsAgroTwin2">"  Nuestra plataforma intuitiva te permite visualizar y controlar cada aspecto de tus cultivos de manera conveniente     y eficiente."</string>
    <string name="queEsAgroTwin3">" Con características como gráficos de tendencias, alertas personalizadas y análisis de datos en tiempo real,     Agrotwin te ayuda a tomar decisiones informadas para optimizar el rendimiento de tus cultivos y maximizar tus cosechas."</string>

    <string name="AcercaDe">Acerca de AgroTwin</string>
    <string name="InfoAgroTwin">¡Bienvenido a AgroTwin!</string>
    <string name="EquipoYColaboradores">Equipo y Colaboradores</string>
    <string name="EquipoYColaboradores2">Al equipo de prácticas y a los propios trabajadores de Hispasec al completo,     mencionando a Luciano Miguel Tobaria y al sector de desarrollo y comunicación por hacerlo posible.</string>
    <string name="EquipoYColaboradores3">Reconocimiento en la participación de AgroTwin: </string>
    <string name="Desarrolladores">Desarrolladores principales:</string>
    <string name="Desarrolladores2">Desarrolladores colaboradores:</string>
    <string name="DiseñoYComunicación">Sector de diseño y comunicación:</string>
    <string name="EquipoYColaboradores4" translatable="false">-Adolfo Pérez-gascón Valls</string>
    <string name="EquipoYColaboradores5" translatable="false">-Adrián Carmona gálvez</string>
    <string name="EquipoYColaboradores6" translatable="false">-Karina Dudinskikh</string>
    <string name="EquipoYColaboradores7" translatable="false">-David Pimentel Salazar</string>
    <string name="EquipoDiseño" translatable="false">-Mayela Marín Jaime</string>
    <string name="EquipoDiseño2" translatable="false">-Natalia Marín Ortega</string>
    <string name="queEsAgroTwin1">Imagina tener el control total de tus invernaderos al alcance de tu mano.</string>


    <string name="user">Introducir tu email</string>
    <string name="Contraseña">Introducir tu contraseña</string>
    <string name="Login">Iniciar Sesión</string>

    <string name="nightMode">Modo Oscuro</string>
    <string name="Notifications">Notificaciones</string>
    <string name="privacy">Privacidad</string>
    <string name="seguridad">Seguridad</string>
    <string name="Size">Tamaño texto</string>

    <string name="Home">Inicio</string>
    <string name="Settings">Ajustes</string>
    <string name="Share">Compartir</string>
    <string name="Aboutus">Sobre nosotros</string>
    <string name="logout">Cerrar sesión</string>
    <string name="cuenta">Cuenta</string>
    <string name="preferences">Aquí puedes ajustar tus preferencias</string>


    <string name="date" translatable="false">A thin wrapper around a millisecond value that allows JDBC to identify this as an SQL DATE
        value. A milliseconds value represents the number of milliseconds that have passed since January 1, 1970 00:00:00.000 GMT.
        To conform with the definition of SQL DATE, the millisecond values wrapped by a java.sql.Date instance
        must be normalized by setting the hours, minutes, seconds, and milliseconds to zero in the particular time zone with which the instance is associated.
        </string>
    <string name="rating" translatable="false">A RatingBar is an extension of SeekBar and ProgressBar that shows a rating in stars.
        The user can touch/drag or use arrow keys to set the rating when using the default size RatingBar.
        The smaller RatingBar style ( R.attr.ratingBarStyleSmall) and the larger indicator-only style
        (R.attr.ratingBarStyleIndicator) do not support user interaction and should only be used as indicators.
        When using a RatingBar that supports user interaction, placing widgets to the left or right of the
        RatingBar is discouraged.</string>
    <string name="edit" translatable="false">A TextView displays text to the user and optionally allows them to edit it.
        A TextView is a complete text editor, however the basic class is configured to not allow editing.
        </string>
    <string name="camera" translatable="false">The Android framework includes support for various cameras and camera features
        available on devices, allowing you to capture pictures and videos in your applications.
        This document discusses a quick, simple approach to image and video capture and outlines an advanced
        approach for creating custom camera experiences for your users.</string>
    <string name="recyclerview" translatable="false">RecyclerView is the ViewGroup that contains the views corresponding to your data.
        Its a view itself so you add RecyclerView into your layout the way you would add any other UI element.
        Each individual element in the list is defined by a view holder object.
        RecyclerView is a ViewGroup added to the android studio as a successor of the GridView and ListView.
        It is an improvement on both of them and can be found in the latest v-7 support packages.
        It has been created to make possible construction of any lists with XML layouts as an item
        which can be customized vastly while improving on the efficiency of ListViews and GridViews.
    </string>
    <string name="Check">Comprueba el bienestar de tu invernadero</string>
    <string name="humedad">humedad</string>
    <string name="sesionIniciada">Sesión Iniciada</string>
    <string name="enterUserPass">Por favor, ingrese el usuario y la contraseña</string>
    <string name="invalidUserPass">Usuario o contraseña inválidos</string>


</resources>