<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".AboutFragment"
    tools:ignore="ExtraText">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


<!--    Título-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/AcercaDe"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold">


            </TextView>

<!--            correo soporte-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="correo de soporte ¿?"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_gravity="center">

            </TextView>


            <LinearLayout
                android:background="@drawable/round_back_whiite10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"

                android:orientation="vertical"
                android:padding="15dp">





<!--bienvenido agrotwin-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/InfoAgroTwin"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:textStyle="bold"


                    >


                </TextView>






            </LinearLayout>

            <LinearLayout
                android:background="@drawable/round_back_whiite10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="15dp">




<!--container uno-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/queEsAgroTwin1"
                    android:textColor="@color/black"
                    android:textSize="20sp"

                    >


                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/queEsAgroTwin2"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"

                    >


                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/queEsAgroTwin3"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"

                    >


                </TextView>






            </LinearLayout>

<!--            equipo y colaboradores-->
            <LinearLayout
                android:background="@drawable/round_back_whiite10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="15dp">






                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/EquipoYColaboradores"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:textStyle="bold"


                    >


                </TextView>


                </LinearLayout>

<!--            container dos-->
            <LinearLayout
                android:background="@drawable/round_back_whiite10_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="15dp">






                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/EquipoYColaboradores2"
                    android:textColor="@color/black"
                    android:textSize="20sp"

                    > </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/EquipoYColaboradores3"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"

                    >


                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Desarrolladores"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"

                    >


                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/EquipoYColaboradores4"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"> </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/EquipoYColaboradores5"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"> </TextView>
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EquipoYColaboradores6"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="10dp"> </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/EquipoYColaboradores7"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"> </TextView>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DiseñoYComunicación"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"

                    ></TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/EquipoDiseño"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"> </TextView>





            </LinearLayout>




















        </LinearLayout>


    </ScrollView>


</LinearLayout>