<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_login_light"
    android:padding="10dp"
    tools:context=".Login" >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".Login"
        tools:ignore="MissingConstraints">

    </LinearLayout>


    <ImageView
        android:layout_width="180dp"
        android:layout_height="195dp"
        android:src="@drawable/logo_agro_twin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-30dp">

    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="184dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".Login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/Login"
            android:textSize="35dp"
            android:textStyle="bold"
            android:textColor="@color/text_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="157dp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/user"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/text_dark">


        </TextView>

        <EditText
            android:id="@+id/userEditTextLogin"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/background_login"
            android:hint="email"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/Contraseña"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/text_dark">


        </TextView>


        <EditText
            android:id="@+id/passwdEditTextLogin"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/background_login"
            android:hint="1234abc"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/background_login_button"
            android:text="@string/Login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>