<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_login_light"
    tools:context=".SettingsFragment"
    tools:ignore="ExtraText">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="180dp"
            android:layout_height="195dp"
            android:src="@drawable/logo_agro_twin"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="-30dp"
            android:layout_gravity="center">

        </ImageView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-10dp"
            android:text="@string/preferences"
            android:textColor="@color/text_dark"
            android:textSize="22sp">


        </TextView>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:padding="15dp">

            <!--                    Dark Mode / Night Mode-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_settings">

                <ImageView
                    android:id="@+id/nightModeIcon"
                    android:layout_width="40dp"
                    android:layout_height="55dp"
                    android:padding="4dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/baseline_mode_night_24">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/nightModeIcon"
                    android:text="@string/nightMode"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold">


                </TextView>


                <Switch
                    android:id="@+id/btnDarkMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:switchMinWidth="50dp"
                    android:thumbTint="@color/background_login_light"
                    android:theme="@style/nightModeSwitch">

                </Switch>
<!--                <Button-->
<!--                    android:id="@+id/btnDarkMode"-->
<!--                    android:layout_width="30dp"-->
<!--                    android:layout_height="34dp"-->
<!--                    android:layout_alignParentEnd="true"-->
<!--                    android:layout_marginEnd="11dp"-->
<!--                    android:layout_margin="10dp"-->
<!--                    android:theme="@style/nightModeSwitch"></Button>-->


            </RelativeLayout>


            <!--                   Notifications-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_settings">>

                <ImageView
                    android:id="@+id/notificationIcon"
                    android:layout_width="40dp"
                    android:layout_height="55dp"
                    android:padding="4dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/baseline_notifications_24">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/notificationIcon"
                    android:text="@string/Notifications"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold">


                </TextView>

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:switchMinWidth="50dp"
                    android:theme="@style/notificationsSwitch">

                </androidx.appcompat.widget.SwitchCompat>

            </RelativeLayout>

            <!--                    Private Account-->




        </LinearLayout>

        <!--                second section-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="20dp"

            android:orientation="vertical"
            android:padding="15dp">

            <!--  security -->


            <!-- Text Size -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_settings"><![CDATA[>



                ]]>

                <ImageView
                    android:id="@+id/Language_Iconn"
                    android:layout_width="40dp"
                    android:layout_height="55dp"
                    android:padding="4dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/baseline_format_size_24">

                </ImageView>

                <Spinner
                    android:id="@+id/spinnerr"
                    android:layout_width="280dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="55dp"

                    />


            </RelativeLayout>

            <!-- Languages -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_settings"><![CDATA[>



                ]]>

                <ImageView
                    android:id="@+id/Language_Icon"
                    android:layout_width="40dp"
                    android:layout_height="55dp"
                    android:padding="4dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/baseline_language_24">

                </ImageView>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="280dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="55dp"

                    >


                </Spinner>


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_settings">>

                <ImageView
                    android:id="@+id/textSizeIcon"
                    android:layout_width="40dp"
                    android:layout_height="55dp"
                    android:padding="4dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/baseline_info_24">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/textSizeIcon"
                    android:text="@string/Size"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold">


                </TextView>


            </RelativeLayout>

            <!--                comienzo de los cambios de lenguaje-->

        </LinearLayout>


    </LinearLayout>


</LinearLayout>


